# wiliwili

./: .clang-format  .cmake-format.py  .flatpak-manifest.yml  .gitignore  .gitmodules  CMakeLists.txt  README.MD  README.md  _config.yml  app_win32.rc  bilibili.py  ffmpeg.patch  mpv.patch  uwp.lua  xmake.lua
.github/workflows/: build.yaml  l4t.yaml  pages.yml  psv_build.yaml  uwp-build.yaml  uwp.yaml
bilibili/: application.hpp  flex_frame.hpp  grid_list.hpp  main.cpp  net_image.hpp  qr_image.hpp  timer.hpp  video.cpp  video.hpp  video_frame.hpp  video_osd.hpp  video_player.cpp  video_player.hpp
bilibili/pages/: grid_frame.hpp  login_frame.hpp  person_frame.hpp  video_frame.hpp
bilibili/utils/: utils.hpp
bilibili/views/: net_image.hpp  qr_image.hpp
cmake/: FindMPV.cmake  GoogleAnalytics.cmake  extra.cmake  macos.cmake
demo/: sw.c
docs/: Development.MD
resources/: .gitignore  overworld.mid
resources/font/: FREEWARE.txt  LICENSE.txt
resources/gamepad/: LICENSE  gamecontrollerdb.txt
resources/i18n/en-US/: brls.json  custom_layout.json  hints.json  installer.json  main.json  version.json  wiliwili.json
resources/i18n/fr/: brls.json  custom_layout.json  installer.json  main.json  popup.json
resources/i18n/it/: hints.json  wiliwili.json
resources/i18n/ja/: hints.json  wiliwili.json
resources/i18n/ja-JP/: wiliwili.json
resources/i18n/ja-RYU/: hints.json  wiliwili.json
resources/i18n/ko/: hints.json  wiliwili.json
resources/i18n/kr-KO/: Hint.json  version.json  wiliwili.json
resources/i18n/zh-Hans/: hints.json  iso639.json  main.json  popup.json  version.json  wiliwili.json
resources/i18n/zh-Hant/: hints.json  wiliwili.json
resources/opencc/: STCharacters.ocd  STCharacters.ocd2  STPhrases.ocd2  TWPhrases.ocd  TWPhrases.ocd2  TWVariants.ocd  s2t.json
resources/svg/: raw_html
resources/xml/activity/: dlna_activity.xml  gallery_activity.xml  hint_activity.xml  live_player_activity.xml  main.xml  pgc_index_activity.xml  player_activity.xml  search_activity.xml  search_activity_tv.xml  setting_activity.xml  splash_activity.xml  video_activity.xml  video_detail.xml
resources/xml/cells/: cell.xml
resources/xml/fragment/: dynamic_card_action.xml  dynamic_detail.xml  dynamic_tab.xml  dynamic_video.xml  home_bangumi.xml  home_cinema.xml  home_hots.xml  home_hots_all.xml  home_hots_history.xml  home_hots_rank.xml  home_hots_weekly.xml  home_live.xml  home_live_area.xml  home_recommends.xml  home_tab.xml  inbox_chat.xml  inbox_feed.xml  inbox_view.xml  latest_update.xml  local_disk.xml  local_tab.xml  mine_bangumi.xml  mine_bangumi_anime.xml  mine_bangumi_series.xml  mine_collection.xml  mine_collection_video_list.xml  mine_history.xml  mine_later.xml  mine_qr_login.xml  mine_tab.xml  player_coin.xml  player_coin_psv.xml  player_collection.xml  player_comment_action.xml  player_comment_action_dynamic.xml  player_comment_action_dynamic_sm.xml  player_danmaku_setting.xml  player_dlna_search.xml  player_evaluate.xml  player_setting.xml  (+19 more)
resources/xml/tabs/: components.xml  layout.xml  recycling_list.xml  scroll_test.xml  settings.xml  user_home.xml  user_home_qr_login.xml  video_list.xml
resources/xml/views/: button_close.xml  captioned_image.xml  collection_list_cell.xml  dynamic_card.xml  feed_card.xml  grid_dropdown.xml  grid_radio_cell.xml  hots_card.xml  inbox_msg.xml  inbox_user.xml  local_disk_item.xml  player_quality_cell.xml  pokemon.xml  recycling_grid.xml  season_header_cell.xml  season_item_cell.xml  season_ugc_header_cell.xml  user_info.xml  user_info_dynamic.xml  user_info_dynamic_all.xml  video_card.xml  video_card_collection.xml  video_card_dynamic.xml  video_card_history.xml  video_card_live.xml  video_card_pgc.xml  video_card_pgc_more.xml  video_card_rank.xml  video_card_rank_pgc.xml  video_card_related.xml  video_card_search_pgc.xml  video_card_series.xml  video_comment.xml  video_grid.xml  video_profile.xml  video_view.xml
scripts/: .gitignore  README.md  build_ffmpeg.sh  build_mac.sh  build_mpv.sh  build_switch.sh  build_switch_deko3d.sh  ffmpeg.patch  generate-assets.lua  i18n.sh  macos_dylib_downloader.sh  macos_dylib_include.sh  macos_dylib_merge.sh  ns_debug.sh  update_gamecontrollerdb.sh
scripts/deb/switchroot-bionic/: Dockerfile  build.sh  control
scripts/ios/: iOSBundleInfo.plist.in
scripts/l4t/: Dockerfile  build.sh
scripts/linux/: cn.xfangfang.wiliwili.appdata.xml  cn.xfangfang.wiliwili.desktop  gen_icons.sh
scripts/mac/: AppIcon.icns  Info.plist  dmg.icns  readme.txt
scripts/ps4/: Dockerfile
scripts/ps4/SDL2/: PKGBUILD  sdl2.patch
scripts/ps4/c-ares/: PKGBUILD
scripts/ps4/cpr/: PKGBUILD  cpr.patch
scripts/ps4/ffmpeg/: PKGBUILD
scripts/ps4/libcurl/: PKGBUILD
scripts/ps4/libjbc/: PKGBUILD
scripts/ps4/libmpv/: PKGBUILD  mpv.patch
scripts/ps4/mbedtls/: PKGBUILD
scripts/ps4/musl/: PKGBUILD  dns.patch
scripts/psv/: Dockerfile
scripts/psv/curl/: VITABUILD  fix_curlformoption.patch
scripts/psv/ffmpeg/: VITABUILD
scripts/psv/mpv/: VITABUILD  mpv.patch
scripts/psv/sdl2/: VITABUILD  ime.patch
scripts/shaders/: old_tv.glsl
scripts/switch-forwarder/: CMakeLists.txt  Makefile  README.md  pack.sh  wiliwili.json
scripts/switch-forwarder/source/: main.c  trampoline.s
scripts/switch/curl/: PKGBUILD  curl.patch
scripts/switch/dav1d/: PKGBUILD  dav1d.patch
scripts/switch/deko3d/: PKGBUILD
scripts/switch/ffmpeg/: PKGBUILD  ffmpeg.patch  ffmpeg_5.patch  ffmpeg_bad_frame.patch  network.patch
scripts/switch/harfbuzz/: PKGBUILD
scripts/switch/libass/: PKGBUILD
scripts/switch/libuam/: PKGBUILD  crossfile.txt
scripts/switch/mpv/: PKGBUILD  (+2 more)
wiliwili/: app_win32.rc.in
wiliwili/include/: auto_tab_frame.hpp  captioned_image.hpp  components_tab.hpp  pokemon_view.hpp  recycling_list_tab.hpp  settings_tab.hpp  user_home_tab.hpp  video_list_tab.hpp
wiliwili/source/: auto_tab_frame.cpp  captioned_image.cpp  components_tab.cpp  main.cpp  pokemon_view.cpp  recycling_list_tab.cpp  resource.manifest  settings_tab.cpp
winrt/: AppxManifest.xml  AppxManifest.xml.in  key.pfx
winrt/docs/: key.md
(+317 files in other folders)
